# boyboy

./: .clang-format  .clang-tidy  .gitignore  .markdownlint.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE-THIRD-PARTY.md  README.md
.github/workflows/: ci.yml  release.yml  tests.yml
config/: asan_suppress.txt
docs/: CPU_Checklist.md  Checklist.md  ROADMAP.md  TestedROMs.md  Tested_ROMs.md
include/: cartridge.h  cpu.h  cpu_constants.h  display.h  instructions.h  instructions_table.h  logging.h  mmu.h  registers.h
include/boyboy/: cartridge.h  display.h  emulator.h  io.h  mmu.h  mmu_constants.h  version.h.in
include/boyboy/app/: app.h
include/boyboy/app/commands/: command.h  command_registry.h  config_command.h  info_command.h  run_command.h
include/boyboy/cart/: cartridge.h
include/boyboy/common/: errors.h  utils.h
include/boyboy/common/config/: config.h  config_limits.h  config_loader.h  config_utils.h  config_validator.h
include/boyboy/common/files/: errors.h  io.h  paths.h  utils.h
include/boyboy/common/log/: logging.h
include/boyboy/common/save/: save_manager.h
include/boyboy/core/cartridge/: cartridge.h  cartridge_loader.h  mbc.h
include/boyboy/core/cpu/: cpu.h  cpu_constants.h  cycles.h  instructions.h  instructions_table.h  interrupt_handler.h  interrupts.h  opcodes.h  registers.h  state.h
include/boyboy/core/display/: display.h
include/boyboy/core/emulator/: emulator.h
include/boyboy/core/io/: apu.h  buttons.h  constants.h  io.h  iocomponent.h  joypad.h  registers.h  serial.h  timer.h
include/boyboy/core/mmu/: constants.h  mmu.h
include/boyboy/core/ppu/: palettes.h  ppu.h  registers.h
include/boyboy/core/profiling/: frame_profiler.h  hot_profiler.h  profiler.h  profiler_utils.h  timer.h
include/boyboy/cpu/: cpu.h  cpu_constants.h  instructions_table.h  interrupt_handler.h  opcodes.h  registers.h
include/boyboy/frontend/cli/: cli_app.h
include/boyboy/frontend/cli/adapters/: cli11_adapter.h  cli_adapter.h
include/boyboy/io/: buttons.h  io.h  iocomponent.h  joypad.h  registers.h  serial.h  timer.h
include/boyboy/log/: logging.h
include/boyboy/mmu/: constants.h  mmu.h
include/boyboy/ppu/: ppu.h  registers.h
include/boyboy/profiling/: frame_profiler.h  hot_profiler.h  profiler_utils.h  timer.h
scripts/: format.py  generate_opcodes.py  run_boyboy.sh
src/: cartridge.cpp  cpu.cpp  display.cpp  instructions.cpp  main.cpp  mmu.cpp
src/app/: main.cpp
src/boyboy/: cartridge.cpp  display.cpp  emulator.cpp  io.cpp  main.cpp  mmu.cpp
src/boyboy/app/: app.cpp
src/boyboy/app/commands/: config_command.cpp  info_command.cpp  run_command.cpp
src/boyboy/cart/: cartridge.cpp  mbc.cpp
src/boyboy/common/: utils.cpp
src/boyboy/common/config/: config_utils.cpp  config_validator.cpp  toml_config_loader.cpp
src/boyboy/common/files/: io.cpp  utils.cpp
src/boyboy/common/save/: save_manager.cpp
src/boyboy/core/cartridge/: cartridge.cpp  cartridge_loader.cpp  mbc.cpp
src/boyboy/core/cpu/: cpu.cpp  instructions.cpp  instructions_table.cpp  interrupt_handler.cpp
src/boyboy/core/display/: display.cpp
src/boyboy/core/emulator/: emulator.cpp
src/boyboy/core/io/: apu.cpp  io.cpp  joypad.cpp  serial.cpp  timer.cpp
src/boyboy/core/mmu/: mmu.cpp
src/boyboy/core/ppu/: ppu.cpp
src/boyboy/cpu/: cpu.cpp  instructions.cpp  instructions_table.cpp  interrupt_handler.cpp
src/boyboy/frontend/cli/: cli_app.cpp
src/boyboy/frontend/cli/adapters/: cli11_adapter.cpp
src/boyboy/io/: io.cpp  joypad.cpp  serial.cpp  timer.cpp
src/boyboy/mmu/: mmu.cpp
src/boyboy/ppu/: ppu.cpp
tests/: .clang-format  .clang-tidy  CMakeLists.txt  cpu_stubs.h  test_cartridge.cpp  test_cpu.cpp  test_instruction_stubs.cpp  test_instruction_table.cpp  test_instructions.cpp  test_main.cpp  test_mmu.cpp  test_registers.cpp
tests/cart/: test_cartridge.cpp  test_romonly.cpp
tests/cartridge/: test_cartridge.cpp  test_mbc.cpp  test_romonly.cpp
tests/common/: paths.h  roms.h
tests/config/: test_config.cpp
tests/cpu/: cpu_stubs.h  test_cpu.cpp  test_instruction_stubs.cpp  test_instruction_table.cpp  test_interrupts.cpp  test_registers.cpp  test_roms.cpp  test_state.cpp
tests/cpu/instructions/: instructions_16bit.cpp  instructions_8bit.cpp  test_instructions_16bit.cpp  test_instructions_8bit.cpp
tests/cpu/instructions/alu/: add_sub.cpp  inc_dec.cpp  logic.cpp  misc.cpp  test_add_sub.cpp  test_inc_dec.cpp  test_logic.cpp
tests/cpu/instructions/bit_ops/: bit.cpp  res.cpp  rotate.cpp  rotate_accumulator.cpp  set.cpp  shift.cpp  swap.cpp
tests/cpu/instructions/control_flow/: call_ret.cpp  jump.cpp
tests/cpu/instructions/load_store/: ld_accumulator.cpp  ld_hl_n.cpp  ld_hl_r.cpp  ld_misc.cpp  ld_r_hl.cpp  ld_r_n.cpp  ld_r_r.cpp  push_pop.cpp
tests/cpu/instructions/misc/: misc.cpp
tests/files/: test_io.cpp  test_utils.cpp
tests/helpers/: common.h  cpu_asserts.h  cpu_fixtures.h  cpu_params.h  file_fixtures.cpp  file_fixtures.h  global_tick_mode.h  rom_fixtures.cpp  rom_fixtures.h
tests/instructions/: test_add_sub.cpp  test_inc_dec.cpp  test_instruction_stubs.cpp  test_instructions_8bit.cpp
tests/io/: test_joypad.cpp  test_serial.cpp  test_timer.cpp
tests/mmu/: test_mmu.cpp
tests/ppu/: test_ppu.cpp
